# modern-cpp-template

./: .clang-format  .cmake-format.py  .gersemirc  .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: ubuntu.yml
cmake/: CompilerWarnings.cmake  SourcesAndHeaders.cmake  StandardSettings.cmake  Utils.cmake  buildinfo.cmake  buildinfo.script.cmake  clang_tidy.cmake  codecov.cmake  compiler_warnings.cmake  conan.cmake  config.cmake  cppcheck.cmake  doxygen.cmake  format.cmake  profraw.script.cmake  setup.cmake  sources.cmake  static_analysis.cmake  utils.cmake  vcpkg.cmake  version.hpp.in
include/: tmp.hpp
include/project/: tmp.hpp
src/: main.cpp  tmp.cpp
test/: CMakeLists.txt
test/src/: tmp_test.cpp
